==> cp/ChangeLog <== 2005-10-12  Paolo Bonzini  <bonzini@gnu.org>

PR c++/24052
	* error.c (dump_expr): Pass LABEL_DECL to dump_decl.  Print
	an ADDR_EXPR of a LABEL_DECL as &&.

==> testsuite/ChangeLog <==
2005-10-12  Paolo Bonzini  <bonzini@gnu.org>

	PR c++/24052
	* g++.dg/ext/label5.C: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@105297 138bc75d-0d04-0410-961f-82ee72b054a4